--- a/templates/editar.html
+++ b/templates/editar.html
@@ -1,28 +1,29 @@
 {% extends "template.html" %}
 {% block conteudo %}
-    <form action="{{ url_for('criar') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('atualizar') }}" method="post" enctype="multipart/form-data">
         <figure class="thumb col-md-4">
-            <img class="img-responsive" src="{{ url_for('imagens', nome_arquivo='capa_padrao.jpg') }}" alt="">
+            <img class="img-responsive" src="{{ url_for('imagens', nome_arquivo=capa_jogo) }}" alt="">
             <figcaption>
                 <label class="fileContainer" for="arquivo">
-                    Adicionar capa
+                    Editar capa
                     <input type="file" id="arquivo" name="arquivo" accept=".jpg">
                 </label>
             </figcaption>
         </figure>
-        
+
+        <input type="hidden" name="id" value="{{ jogo.id }}">
         <fieldset>
             <div class="form-group">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" class="form-control">
+                <input type="text" id="nome" name="nome" value="{{ jogo.nome }}" class="form-control">
             </div>
             <div class="form-group">
                 <label for="categoria">Categoria</label>
-                <input type="text" id="categoria" name="categoria" class="form-control">
+                <input type="text" id="categoria" name="categoria" value="{{ jogo.categoria }}" class="form-control">
             </div>
             <div class="form-group">
                 <label for="console">Console</label>
-                <input type="text" id="console" name="console" class="form-control">
+                <input type="text" id="console" name="console" value="{{ jogo.console }}" class="form-control">
             </div>
             <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
             <a class="btn btn-danger" href="{{url_for('index')}}">Voltar</a>
