--- a/templates/lista.html
+++ b/templates/lista.html
@@ -1,11 +1,15 @@
 {% extends "template.html" %}
 {% block conteudo %}
+    <a class="btn btn-primary" href="{{url_for('novo')}}">Novo Jogo</a>
+    <br>
+
     <table class="table table-striped table-responsive table-bordered">
         <thead class="thead-default">
             <tr>
                 <th>Nome</th>
                 <th>Categoria</th>
                 <th>Console</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -14,6 +18,10 @@
                     <td>{{ jogo.nome }}</td>
                     <td>{{ jogo.categoria }}</td>
                     <td>{{ jogo.console }}</td>
+                    <td>
+                        <a href="{{ url_for('editar', id=jogo.id) }}">editar</a>
+                        <a href="{{ url_for('deletar', id=jogo.id) }}">deletar</a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
